--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "datauri": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
+    "stripe": "^13.8.0",
     "validator": "^13.11.0"
   }
 }
